Bug 1612108 - z-index fix for ModalOverlay. r=pdahiya, a=RyanVM
Quick regression fix for uplift.

Differential Revision: https://phabricator.services.mozilla.com/D61283

--- a/browser/components/newtab/content-src/asrouter/components/ModalOverlay/_ModalOverlay.scss
+++ b/browser/components/newtab/content-src/asrouter/components/ModalOverlay/_ModalOverlay.scss
@@ -19,6 +19,7 @@ $modal-scrollbar-z-index: 1100;
   &.active {
     display: block;
     position: absolute;
+    z-index: $modal-scrollbar-z-index;
   }
 }
 
